k3s/speed/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: default
spec:
  selector:
    app: librespeed
  ports:
  - name: http
    targetPort: 8088
    port: 8088
